...
        "/list" -> R.string.chat_command_list
        "/kick" -> R.string.chat_command_kick
        "/ban" -> R.string.chat_command_ban
        "/invite" -> R.string.chat_command_invite
        "/knock" -> R.string.chat_command_knock
        "/ctcp" -> R.string.chat_command_ctcp
        "/motd" -> R.string.chat_command_motd
        "/raw" -> R.string.chat_command_raw
        else -> null
    }

@Preview
@Composable
...
